20-kubernetes/10-ingress/pingaccess-cluster-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    role: pingaccess
    tier: console
  name: pingaccess-admin
spec:
  rules:
  # example pingaccess-admin.example.com
  - host: pingaccess-admin.${PING_IDENTITY_DEVOPS_DNS_ZONE}
    http:
      paths:
      - backend:
          serviceName: pingaccess-admin
          servicePort: 9000
        path: /
  tls:
  - hosts:
    - pingaccess-admin.${PING_IDENTITY_DEVOPS_DNS_ZONE}
    secretName: tls-secret

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    role: pingaccess
    tier: engine
  name: pingaccess
spec:
  rules:
  - host: pingaccess.${PING_IDENTITY_DEVOPS_DNS_ZONE}
    http:
      paths:
      - backend:
          serviceName: pingaccess
          servicePort: 3000
        path: /
  tls:
  - hosts:
    - pingaccess.${PING_IDENTITY_DEVOPS_DNS_ZONE}
    secretName: tls-secret
