20-kubernetes/10-ingress/pingfederate-cluster-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    role: pingfederate
    tier: admin
  name: pingfederate-admin
spec:
  rules:
  - host: pingfederate-admin-${PING_IDENTITY_DEVOPS_DNS_ZONE}
    http:
      paths:
      - backend:
          serviceName: pingfederate-admin
          servicePort: 9999
        path: /
#       - backend:
#           serviceName: pingfederate-admin
#           servicePort: 9999
#         path: /pf-admin-api
#       - backend:
#           serviceName: pingfederate-admin
#           servicePort: 9999
#         path: /render
  tls:
  - hosts:
    # example pingfederate-admin-yourname.ping-devops.com
    - pingfederate-admin-${PING_IDENTITY_DEVOPS_DNS_ZONE}
    secretName: tls-secret

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    role: pingfederate
    tier: engine
  name: pingfederate
spec:
  rules:
  - host: pingfederate-${PING_IDENTITY_DEVOPS_DNS_ZONE}
    http:
      paths:
      - backend:
          serviceName: pingfederate
          servicePort: 9031
        path: /
  tls:
  - hosts:
    - pingfederate-${PING_IDENTITY_DEVOPS_DNS_ZONE}
    secretName: tls-secret
