20-kubernetes/10-ingress/pingfederate-standalone-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    role: pingfederate
  name: pingfederate
spec:
  rules:
  - host: pingfederate-admin-${PING_IDENTITY_DEVOPS_DNS_ZONE}
    http:
      paths:
      - backend:
          serviceName: pingfederate
          servicePort: 9999
        path: /pingfederate
      - backend:
          serviceName: pingfederate
          servicePort: 9999
        path: /pf-admin-api
  - host: pingfederate-${PING_IDENTITY_DEVOPS_DNS_ZONE}
    http:
      paths:
      - backend:
          serviceName: pingfederate
          servicePort: 9031
        path: /
  tls:
  - hosts:
    # example pingfederate-admin.example.com
    - pingfederate-admin-${PING_IDENTITY_DEVOPS_DNS_ZONE}
    secretName: tls-secret
  - hosts:
    - pingfederate-${PING_IDENTITY_DEVOPS_DNS_ZONE}
    secretName: tls-secret
